--- a/fontello-embedded.css
+++ b/fontello-embedded.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?30634901');
-  src: url('../font/fontello.eot?30634901#iefix') format('embedded-opentype'),
-       url('../font/fontello.svg?30634901#fontello') format('svg');
+  src: url('fontello.eot?30634901');
+  src: url('fontello.eot?30634901#iefix') format('embedded-opentype'),
+       url('fontello.svg?30634901#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
