--- a/fontello.css
+++ b/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?56794623');
-  src: url('../font/fontello.eot?56794623#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?56794623') format('woff2'),
-       url('../font/fontello.woff?56794623') format('woff'),
-       url('../font/fontello.ttf?56794623') format('truetype'),
-       url('../font/fontello.svg?56794623#fontello') format('svg');
+  src: url('fontello.eot?56794623');
+  src: url('fontello.eot?56794623#iefix') format('embedded-opentype'),
+       url('fontello.woff2?56794623') format('woff2'),
+       url('fontello.woff?56794623') format('woff'),
+       url('fontello.ttf?56794623') format('truetype'),
+       url('fontello.svg?56794623#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
